--- a/core/src/main/resources/org/pentaho/di/verticabulkload/messages/messages_en_US.properties
+++ b/core/src/main/resources/org/pentaho/di/verticabulkload/messages/messages_en_US.properties
@@ -2,8 +2,6 @@ VerticaBulkLoaderMeta.TypeLongDesc=Vertica bulk loader
 VerticaBulkLoaderMeta.TypeTooltipDesc=Bulk load data into a Vertica database table
 VerticaBulkLoader.Exception.FailedToFindField=Could not find field {0} in stream
 VerticaBulkLoader.Exception.FieldRequired=Field [{0}] is required and couldn''t be found\!
-VerticaBulkLoader.Exception.RowRejected=Row Rejected\: {0}
-VerticaBulkLoader.Exception.ClosingLogError=Unable to close Log Files
 VerticaBulkLoaderDialog.BuildSQLError.DialogMessage=Unable to build the SQL statement because of an error
 VerticaBulkLoaderDialog.BuildSQLError.DialogTitle=Couldn''t build SQL
 VerticaBulkLoaderDialog.ColumnInfo.StreamField=Stream field
@@ -29,6 +27,8 @@ VerticaBulkLoaderDialog.AbortOnError.Label=Abort on error
 VerticaBulkLoaderDialog.AbortOnError.Tooltip=If a record is rejected, the statement will be aborted and no data will be loaded. If this option is not enabled, rejected records will be logged but will not stop the bulk load.
 VerticaBulkLoaderDialog.InsertDirect.Label=Insert direct to ROS
 VerticaBulkLoaderDialog.InsertDirect.Tooltip=If enabled, the statement is a COPY DIRECT statement and Vertica will insert the data directly to the ROS (Read Optimized Storage). Otherwise, the data will be inserted to the WOS (Write Optimized Storage) (e.g. a "trickle load")
+VerticaBulkLoaderDialog.Enforcelength.Label=Enable the Enforcelength
+VerticaBulkLoaderDialog.Enforcelength.Tooltip=If enabled, the ENFORCERLENGTH parameter to reject rows that exceed the length of the target table.
 VerticaBulkLoaderDialog.Delimiter.Label=Delimiter character
 VerticaBulkLoaderDialog.Delimiter.Tooltip=Specifies the single-character column delimiter used during the load. Default is the tab character (\\t). Be sure to use a character that is not found in any field of the records because Vertica does not use field quoting.
 VerticaBulkLoaderDialog.NullString.Label=Null string
